added functions that change task status