@@ -85,6 +85,9 @@
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<skipTests>${unit-tests.skip}</skipTests>
 					<excludes>
 						<exclude>**/*IT.java</exclude>
@@ -94,6 +97,11 @@
 
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
 				<executions>
 					<execution>
 						<id>integration-test</id>
